fixing text-wrapping issue

--- a/SCSS/listOfCourses.scss
+++ b/SCSS/listOfCourses.scss
@@ -117,7 +117,7 @@
 	}
 	button {
 		align-self: flex-end;
-		width: 188px;
+		width: 210px;
 		height: 44px;
 		background: $Accent01;
 		color: $Main;
